<resources>
    <string name="app_name" translatable="false">EasyHome</string>
    <string name="qs_button_label" translatable="false">EasyHome Settings</string>
    <string name="home_button1_default_label" translatable="false">Button1</string>
    <string name="home_button2_default_label" translatable="false">Button2</string>
    <string name="home_clock_format">MM / dd (EEE)</string>
    <string name="home_battery_default_text" translatable="false">0%</string>
    <string name="empty_text" translatable="false"> </string>
    <string name="color_picker_default_color" translatable="false">#000000</string>
    <string name="settings_home_settings_label">Home Settings</string>
    <string name="settings_launcher_label">Launcher</string>
    <string name="settings_check_update_label">Check Update</string>
    <string name="settings_restart_label">Restart</string>
    <string name="settings_home_button1_text_label" translatable="false">Button1Text</string>
    <string name="settings_home_button1_tel_number_label" translatable="false">Button1TelNumber</string>
    <string name="settings_home_button1_color_label" translatable="false">Button1Color</string>
    <string name="settings_home_button1_text_color_label" translatable="false">Button1TextColor</string>
    <string name="settings_home_button2_text_label" translatable="false">Button2Text</string>
    <string name="settings_home_button2_tel_number_label" translatable="false">Button2TelNumber</string>
    <string name="settings_home_button2_color_label" translatable="false">Button2Color</string>
    <string name="settings_home_button2_text_color_label" translatable="false">Button2TextColor</string>
    <string name="error_save_config">Failed to save config file</string>
    <string name="error_save_default_config">Failed to save default config file</string>
    <string name="error_read_config">Failed to read config file</string>
</resources>