<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:textAlignment="center"
    android:textDirection="ltr"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@+id/constraintLayout"
        app:layout_anchorGravity="center">

        <Button
            android:id="@+id/callButton1"
            android:layout_width="0dp"
            android:layout_height="225dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/home_button1_default_label"
            android:textSize="50sp"
            app:cornerRadius="15dp"
            app:icon="@android:drawable/ic_menu_call"
            app:iconGravity="textTop"
            app:iconSize="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/callButton2"
            android:layout_width="0dp"
            android:layout_height="225dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="8dp"
            android:text="@string/home_button2_default_label"
            android:textSize="50sp"
            app:cornerRadius="15dp"
            app:icon="@android:drawable/ic_menu_call"
            app:iconGravity="textTop"
            app:iconSize="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/callButton1" />

        <TextClock
            android:id="@+id/textClock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:format12Hour="hh:mm"
            android:format24Hour="HH:mm"
            android:textAlignment="center"
            android:textDirection="ltr"
            android:textSize="120sp"
            android:textColor="@color/foreground_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/callButton2" />

        <TextClock
            android:id="@+id/textClock2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:format12Hour="@string/home_clock_format"
            android:format24Hour="@string/home_clock_format"
            android:textAlignment="center"
            android:textDirection="ltr"
            android:textSize="60sp"
            android:textColor="@color/foreground_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textClock" />

        <Button
            android:id="@+id/tapButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="70dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/textClock2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/callButton2" />

        <TextView
            android:id="@+id/batteryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/home_battery_default_text"
            android:textSize="20sp"
            app:drawableLeftCompat="@drawable/battery_android_question_24px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>